# Pearl-Calculator-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  publish.yml  release.yml
.github/workflows/scripts/: generate-dmg.sh  summary.py
assets/: icon.icns
core/: Cargo.toml
core/src/: basic.rs  cli.rs  codec.rs  config.rs  convert.rs  error.rs  lib.rs  main.rs  output.rs  pearl.rs  util.rs
core/src/basic/: code.rs  config.rs  convert.rs  pearl.rs
core/src/cli/: args.rs  helpers.rs  output.rs
core/src/engine/: runtime.rs  solver.rs
core/src/model/: config.rs  report.rs
core/tests/: calculation_nether.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/assets/: LICENSE.rtf
crates/gui/i18n/: en-US.ftl  zh-CN.ftl
crates/gui/src/: app.rs  constants.rs  i18n.rs  main.rs  models.rs  parsing.rs  settings.rs
crates/gui/src/app/: actions.rs  shell.rs  ui.rs
gui/: Cargo.toml  build.rs
gui/src/: i18n.rs  main.rs  models.rs
gui/src/app/: actions.rs  shell.rs  ui.rs
pearl-calculator/: Cargo.toml
pearl-calculator-gui/: Cargo.toml
src/: api.rs  cli.rs  codec.rs  engine.rs  error.rs  model.rs
src/cli/: args.rs
src/engine/: kinematics.rs  runtime.rs
src/model/: code.rs  config.rs  pearl.rs
test/: config.json
test-config/: config.json
website/: index.html
