[package]
name = "pearl-calculator"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[workspace]
resolver = "3"
members = ["crates/gui"]

[workspace.package]
version = "0.6.6"
edition = "2024"
description = "A Pearl Calculator for Minecraft"
readme = "README.md"
repository = "https://github.com/jasonxue1/Pearl-Calculator-rs"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
comfy-table = "7.2"
itertools = "0.14"
miette = "7.6"
minecraft-mth = "0.2"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
