[package]
name = "pearl-calculator"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage = "https://pearl.jasonxue.dev"
repository.workspace = true
license.workspace = true

[workspace]
resolver = "3"
members = ["crates/gui"]

[workspace.package]
version = "0.7.2"
edition = "2024"
description = "A Pearl Calculator for Minecraft"
readme = "README.md"
repository = "https://github.com/jasonxue1/Pearl-Calculator-rs"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6.0"
clap_complete_nushell = "4.5.10"
comfy-table = "7.2"
itertools = "0.14"
miette = "7.6"
minecraft-mth = "0.2"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
