[package]
name = "pearl-calculator"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
comfy-table = "7.2"
itertools = "0.14"
minecraft-mth = "0.2"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
