[package]
name = "pearl-calculator-gui"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.bundle]
name = "Pearl Calculator"
identifier = "dev.jasonxue.pearl"
short_description = "A simple Pearl Calculator"
long_description = "A simple Pearl Calculato built with egui"
icon = ["icons/icon.png"]

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"
nalgebra = "0.34"
pearl-calculator = { path = "../core" }
serde_json = "1.0"

[build-dependencies]
winresource = "0.1"
