[package]
name = "pearl-calculator-gui"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.bundle]
name = "Pearl Calculator"
identifier = "dev.jasonxue.pearl"
short_description = "A simple Pearl Calculator"
long_description = "A simple Pearl Calculato built with egui"
icon = ["assets/icon-512.png", "assets/icon-256.png", "assets/icon-128.png"]

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"
fluent-bundle = "0.16"
fluent-syntax = "0.12"
nalgebra = "0.34"
pearl-calculator = { path = "../core" }
serde_json = "1.0"
unic-langid = "0.9"

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
