[package]
name = "pearl-calculator-gui"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage = "https://pearl.jasonxue.dev"
repository.workspace = true
license.workspace = true

[package.metadata.packager]
product-name = "Pearl Calculator"
identifier = "dev.jasonxue.pearl"
description = "A simple Pearl Calculator"
long_description = "A simple Pearl Calculator built with egui"
authors = ["Jason Xue <hi@jasonxue.dev>"]
homepage = "https://pearl.jasonxue.dev"
out-dir = "../../dist"
licenseFile = "../../LICENSE"
icons = ["assets/icons/*"]
nsis.installerIcon = "assets/icon.ico"
pacman.source = [
  "https://github.com/jasonxue1/Pearl-Calculator-rs/releases/download/v${pkgver}/pearl-calculator-gui_${pkgver}_${arch}.tar.gz",
]

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"
fluent-bundle = "0.16"
fluent-syntax = "0.12"
nalgebra = "0.34"
pearl-calculator = { path = "../.." }
rfd = "0.15"
serde_json = "1.0"
unic-langid = "0.9"

[build-dependencies]
winresource = "0.1"
