[package]
name = "pearl-calculator-gui"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage = "https://pearl.jasonxue.dev"
repository.workspace = true
license.workspace = true

[package.metadata.packager]
productName = "Pearl Calculator"
identifier = "dev.jasonxue.pearl"
description = "A simple Pearl Calculator"
longDescription = "A simple Pearl Calculator built with egui"
authors = ["Jason Xue <hi@jasonxue.dev>"]
homepage = "https://pearl.jasonxue.dev"
outDir = "../../dist"
licenseFile = "assets/LICENSE.rtf"
icons = ["assets/icons/*"]
resources = [
  "assets/LICENSE.rtf",
  "assets/OFL.txt",
  "../../LICENSE-APACHE",
  "../../LICENSE-MIT"
]
nsis.installerIcon = "assets/icon.ico"
pacman.source = [
  "https://github.com/jasonxue1/Pearl-Calculator-rs/releases/download/v${pkgver}/pearl-calculator-gui_${pkgver}_${arch}.tar.gz",
]

[package.metadata.packager.dmg]
background = "assets/dmg-bg.png"
windowSize = { width = 700, height = 400 }
appPosition = { x = 170, y = 205 }
appFolderPosition = { x = 535, y = 195 }
windowPosition = { x = 200, y = 120 }

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"
fluent-bundle = "0.16"
fluent-syntax = "0.12"
nalgebra = "0.34"
pearl-calculator = { path = "../.." }
rfd = "0.15"
serde_json = "1.0"
unic-langid = "0.9"

[build-dependencies]
winresource = "0.1"
